--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,6 @@
 
 target/
+Dockerfile
 
-# Ignore devspace.yaml file to prevent image rebuilding after config changes
-devspace.yaml
+# Ignore .git folder
+.git
