--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <url>https://github.com/devspace-cloud/devspace</url>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
